--- a/vcastplay-cms/src/app/component/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/component/toolbar/toolbar.component.html
@@ -1,7 +1,12 @@
-<p-toolbar>
-    <ng-template #start>
-        <p-button icon="pi pi-plus" class="mr-2" text severity="secondary" />
-        <p-button icon="pi pi-print" class="mr-2" text severity="secondary" />
-        <p-button icon="pi pi-upload" text severity="secondary" />
-    </ng-template>
-</p-toolbar>
+<div class="toolbar-container justify-between h-20">
+    <a class="app-logo" href="/">
+        <img src="assets/vcast-white.png" alt="app logo">
+    </a>
+    <div class="flex flex-row items-center cursor-pointer text-white">
+        <p-avatar label="N" shape="circle" size="large"></p-avatar>
+        <div class="flex flex-col ms-1 md:ms-3 ps-1">
+            <h6 class="font-bold">Nyxsys PH</h6>
+            <p class="text-sm">Administrator</p>
+        </div>
+    </div>
+</div>
