--- a/vcastplay-cms/src/app/component/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/component/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar-container justify-between h-20">
-    <a class="app-logo" href="/">
+    <a class="w-[10rem]" href="/">
         <img src="assets/vcast-white.png" alt="app logo">
     </a>
     <div class="flex flex-row items-center cursor-pointer text-white">
