--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen md:ms-25">
+<div class="min-h-screen md:ms-[7rem]">
     <app-toolbar></app-toolbar>
     <app-drawer></app-drawer>
     <div class="main-wrapper">
