--- a/vcastplay-cms/src/styles.scss
+++ b/vcastplay-cms/src/styles.scss
@@ -15,12 +15,29 @@ html {
     display: flex;
     align-items: center;
     background-color: var(--p-primary-500);
-
-    .app-logo {
-        width: 8rem;
-    }
 }
 
 .p-breadcrumb {
     --p-breadcrumb-background: var(--p-primary-0);
+}
+
+/* Scrollbar effect */
+
+::-webkit-scrollbar {
+    width: 16px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
