--- a/vcastplay-cms/src/app/component/drawer/drawer.component.html
+++ b/vcastplay-cms/src/app/component/drawer/drawer.component.html
@@ -1,4 +1,4 @@
-<div class="fixed drawer-container hidden md:block w-25 h-full bg-gray-800 z-40">
+<div class="fixed drawer-container hidden md:block w-[7rem] h-full bg-gray-800 z-40">
     <div class="flex flex-col gap-3">
         @for (item of items(); track $index) {
             <li 
