--- a/vcastplay-cms/src/app/component/filters/filters.component.html
+++ b/vcastplay-cms/src/app/component/filters/filters.component.html
@@ -1,1 +1,28 @@
-form
+<form [formGroup]="filters" class="flex flex-row gap-4 justify-between mb-5">
+    <div>
+        <p-button icon="pi pi-filter" pTooltip="More Filter" tooltipPosition="bottom" [text]="true" (onClick)="filter.toggle($event)"></p-button>
+        <p-popover #filter>
+            <div class="flex flex-col gap-5 w[25rem]">
+                <div class="flex flex-row mb-1 items-center">
+                    <p-button (onClick)="filters.reset()" label="Apply" size="small" [text]="true" icon="pi pi-check"></p-button>
+                    <p-button severity="secondary" (onClick)="filters.reset()" label="Clear" size="small" [text]="true" icon="pi pi-times"></p-button>
+                </div>
+                <p-select [options]="sortBy" formControlName="sortBy" optionLabel="label" optionValue="value" placeholder="Sort By" class="w-50" />
+                <div class="flex flex-row gap-4">
+                    @for (item of [ 'asc', 'desc' ]; track $index) {
+                        <div>
+                            <p-radiobutton [inputId]="item" [value]="item" formControlName="sort"></p-radiobutton>
+                            <label [for]="item" class="ml-2">{{ item.toUpperCase() }}</label>
+                        </div>
+                    }
+                </div>
+            </div>
+        </p-popover>
+    </div>
+    <p-input-group>
+        <input pInputText placeholder="Search" formControlName="keywords" />
+        <p-inputgroup-addon>
+            <p-button (onClick)="filters.reset()" [icon]="'pi ' + (keywords?.dirty ? 'pi-times' : 'pi-search')"></p-button>
+        </p-inputgroup-addon>
+    </p-input-group>
+</form>
