--- a/vcastplay-cms/src/app/component/drawer/drawer.component.html
+++ b/vcastplay-cms/src/app/component/drawer/drawer.component.html
@@ -1,4 +1,4 @@
-<div class="fixed drawer-container hidden md:block w-[7rem] h-full bg-gray-800 z-40">
+<div class="fixed drawer-container hidden md:block w-[7rem] h-full bg-gray-800 z-50">
     <div class="flex flex-col gap-3">
         @for (item of items(); track $index) {
             <li 
@@ -9,7 +9,7 @@
                 <p class="text-white">{{ item.label }}</p>
 
                 @if (item.menus && item.expanded) {
-                    <div class="absolute left-full top-0 bg-white rounded-md shadow-md p-2">
+                    <div class="absolute left-full top-0 bg-white rounded-md shadow-md">
                         <p-menu #menu [model]="item.menus" appendTo="button"></p-menu>
                     </div>
                 }
