--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<div class="m-10">
-    <p class="text-3xl">Hello WOrld</p>
+<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+
+<div class="m-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+    @for (widget of widgets; track $index) {
+        <p-card><ng-container [ngComponentOutlet]="widget.content"></ng-container></p-card>
+    }
 </div>
