--- a/vcastplay-cms/src/app/components/dashboard-components/storage-usage/storage-usage.component.html
+++ b/vcastplay-cms/src/app/components/dashboard-components/storage-usage/storage-usage.component.html
@@ -2,6 +2,6 @@
     <i class="pi pi-database" [style.font-size.rem]="3"></i>
     <div class="flex flex-col">
         <p class="font-normal">Storage Usage</p>
-        <h6 class="text-xl font-bold">5MB / 200GB</h6>
+        <h6 class="text-2xl font-bold">5MB / 200GB</h6>
     </div>
 </div>
