--- a/vcastplay-cms/src/app/components/dashboard-components/subscription-plan/subscription-plan.component.html
+++ b/vcastplay-cms/src/app/components/dashboard-components/subscription-plan/subscription-plan.component.html
@@ -2,6 +2,6 @@
     <i class="pi pi-users" [style.font-size.rem]="3"></i>
     <div class="flex flex-col">
         <p class="font-normal">Subscription Plan</p>
-        <h6 class="text-xl font-bold">50</h6>
+        <h6 class="text-2xl font-bold">50</h6>
     </div>
 </div>
