--- a/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
+++ b/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
@@ -1,1 +1,26 @@
 <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+
+<p-card>
+    <div class="flex flex-col gap-8">
+        <span class="text-xl font-bold text-surface-900 dark:text-surface-0">My Profile</span>
+        
+        <div class="grid grid-cols-12 gap-4 border-b-1 border-gray-200 p-3">
+            <p class="col-span-3">Personal Information</p>
+            <div class="grid grid-col-12 md:grid-col-2 col-span-7">
+                All Personal info inputs
+            </div>
+        </div>
+        <div class="grid grid-cols-12 gap-4 border-b-1 border-gray-200 p-3">
+            <p class="col-span-3">Avatar</p>
+            <div class="col-span-7">
+                All Personal info inputs
+            </div>
+        </div>
+        <div class="grid grid-cols-12 gap-4 p-3">
+            <p class="col-span-3">Security</p>
+            <div class="col-span-7">
+                All Personal info inputs
+            </div>
+        </div>
+    </div>
+</p-card>
