--- a/vcastplay-cms/src/app/pages/settings/users/users.component.html
+++ b/vcastplay-cms/src/app/pages/settings/users/users.component.html
@@ -8,7 +8,7 @@
             <p-button (onClick)="onClickRefresh()" label="Refresh" icon="pi pi-refresh"></p-button>
         </div>
     </div>
-    <p-table [value]="users" [scrollable]="true">
+    <p-table class="hidden lg:block" [value]="users" [scrollable]="true">
         <ng-template #header>
             <tr>
                 <th pFrozenColumn>Code</th>
@@ -32,6 +32,19 @@
             </tr>
         </ng-template>
     </p-table>
+    <div class="block lg:hidden grid grid-cols-1 gap-5">
+        @for (item of users; track $index) {
+            <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
+                <div class="flex flex-col">
+                    <h6 class="font-semibold">{{ item.firstName }} {{ item.lastName }}</h6>
+                    <p>{{ item.email }}</p>
+                </div>
+                <div class="flex flex-row">
+                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                </div>
+            </div>
+        }
+    </div>
 </p-card>
 
 <ng-template #actionBtn let-item>
@@ -40,7 +53,7 @@
 </ng-template>
 
 <p-dialog header="User Information" [(visible)]="showDialog" styleClass="w-[30rem] md:w-[50rem] h-auto" [modal]="true" [draggable]="false">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8" [formGroup]="userForm">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8" [formGroup]="userService.userForm">
         <p-floatlabel variant="in">
             <input id="firstName" pInputText formControlName="firstName" class="w-full" />
             <label for="firstName">First Name</label>
