added screen locations

--- a/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
@@ -3,10 +3,10 @@
         <img src="assets/vcast-white.png" alt="app logo">
     </a>
     <div class="flex flex-row items-center cursor-pointer text-white">
-        <p-avatar label="N" shape="circle" size="large"></p-avatar>
+        <p-avatar label="N" shape="circle" size="large" [routerLink]="['/settings/profile']"></p-avatar>
         <div class="flex flex-col ms-1 md:ms-3 ps-1">
-            <h6 class="font-bold">Nyxsys PH</h6>
-            <p class="text-sm">Administrator</p>
+            <h6 class="font-bold !select-none">Nyxsys PH</h6>
+            <p class="text-sm !select-none">Administrator</p>
         </div>
     </div>
 </div>
