--- a/vcastplay-cms/src/app/pages/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/pages/auth/login/login.component.html
@@ -7,9 +7,9 @@
             </div>
         </ng-template>
         <ng-template #title>
-            Login to your account
+            <p class="text-2xl font-bold">Login to your account</p>
         </ng-template>
-        <form class="grid grid-cols-1 gap-4 my-5" [formGroup]="auth.loginForm">
+        <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
             <p-floatlabel variant="in">
                 <input id="username" pInputText formControlName="username" [fluid]="true" />
                 <label for="username">Username*</label>
@@ -18,9 +18,12 @@
                 <p-password formControlName="password" inputId="password" [toggleMask]="true" [fluid]="true" [feedback]="false" />
                 <label for="password">Password*</label>
             </p-floatlabel>
-            <div class="flex items-center">
-                <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
-                <label for="rememberMe" class="ml-2">Remember Me</label>
+            <div class="flex justify-between items-center">
+                <div class="flex items-center">
+                    <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
+                    <label for="rememberMe" class="ml-2">Remember Me</label>
+                </div>
+                <a href="/" class="hover:text-orange-500">Forgot Password?</a>
             </div>
         </form>
         <ng-template #footer>
