--- a/vcastplay-cms/src/styles.scss
+++ b/vcastplay-cms/src/styles.scss
@@ -21,6 +21,58 @@ html {
     --p-breadcrumb-background: var(--p-primary-0);
 }
 
+// Leaflet CSS styles
+.custom-cluster-icon {
+    position: relative;
+    display: inline-block;
+}
+
+.custom-marker.online .marker-dot {
+    background-color: var(--color-green-500);
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+  
+.custom-marker.offline .marker-dot {
+    background-color: var(--color-red-500);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+
+
+.circle {
+    width: 50px;
+    height: 50px;
+    background: radial-gradient(circle at center, rgba(255, 255, 255, 0) 30%, rgba(0, 0, 0, 0.1) 70%);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    position: relative;
+}
+
+.circle.blue {
+    background-color: rgba(52, 152, 219, 0.7);
+}
+
+.circle:before {
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    right: -15px;
+    bottom: -15px;
+    border-radius: 50%;
+    background: radial-gradient(circle at center, rgba(52, 152, 219, 0.7), rgba(52, 152, 219, 0));
+    z-index: -1;
+}
+
+
 /* Scrollbar effect */
 
 ::-webkit-scrollbar {
