Enhanced dashboard UI

--- a/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     </a>
     <div class="flex flex-row items-center cursor-pointer text-white">
         <p-avatar label="N" shape="circle" size="large" [routerLink]="['/settings/profile']"></p-avatar>
-        <div class="flex flex-col ms-1 md:ms-3 ps-1">
+        <div class="flex flex-col ms-1 md:ms-3 ps-1 hidden md:block">
             <h6 class="font-bold !select-none">Nyxsys PH</h6>
             <p class="text-sm !select-none">Administrator</p>
         </div>
