--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -2,11 +2,11 @@
     <app-toolbar></app-toolbar>
     <app-drawer></app-drawer>
     <div class="main-wrapper relative">
-        <div class="main-content p-3 md:p-[2rem] bg-gray-200">
+        <div class="main-content p-3 md:p-[2rem] bg-gray-200 relative">
             <router-outlet></router-outlet>
         </div>
 
-        <div class="block md:hidden absolute bottom-0 end-0">
+        <div class="block md:hidden absolute bottom-0 end-0 z-100">
             <div class="bg-orange-500 py-[1rem] px-[1.125rem] text-white rounded-tl-xl cursor-pointer" (click)="utils.drawerVisible.set(!utils.drawerVisible())">
                 <i class="pi pi-bars"></i>
             </div>
