--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -1,9 +1,28 @@
-<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+<div class="flex flex-col gap-5">
+    
+    <div class="md:absolute top-0 right-0 w-full md:w-[40%] lg:w-[35%] xl:w-[25%] z-50 md:m-5">
+        <p-accordion [value]="0">
+            <p-accordion-panel value="0" >
+                <p-accordion-header [style]="{ 'background-color': 'var(--p-primary-500)', 'color': 'white' }">My Subscription Plan</p-accordion-header>
+                <p-accordion-content><app-subscription-plan /></p-accordion-content>
+            </p-accordion-panel>
+        </p-accordion>
+    </div>
+    
+    <div class="w-full md:h-full md:absolute top-0 left-0">
+        <app-screen-map />
+    </div>
 
-<div class="mt-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-    @for (widget of widgets; track $index) {
-        <p-card><ng-container [ngComponentOutlet]="widget.content"></ng-container></p-card>
-    }
-    <app-sample-chart class="md:col-span-2" />
-    <app-screen-lists class="md:col-span-2" />
+    <div class="md:absolute w-full md:w-[30%] lg:w-[25%] top-15 left-0 md:m-5 z-30">
+        <p-accordion value="0" styleClass="h-[34px]">
+            <p-accordion-panel value="0">
+                <p-accordion-header>Screen Status</p-accordion-header>
+                <p-accordion-content><app-screen-status /></p-accordion-content>
+            </p-accordion-panel>
+            <p-accordion-panel value="1">
+                <p-accordion-header>Screen Lists</p-accordion-header>
+                <p-accordion-content><app-screen-lists /></p-accordion-content>
+            </p-accordion-panel>
+        </p-accordion>
+    </div>
 </div>
