--- a/vcastplay-cms/src/app/pages/settings/roles/roles.component.html
+++ b/vcastplay-cms/src/app/pages/settings/roles/roles.component.html
@@ -4,12 +4,12 @@
     <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
         <app-filters class="w-full md:w-[25rem]"></app-filters>
         <div class="flex gap-4">
-            <p-button (onClick)="onClickAddNew()" label="Add New" variant="outlined" icon="pi pi-plus" />
+            <p-button (onClick)="onClickAddNew()" label="Add New" icon="pi pi-plus" />
             <!-- <button (click)="onClickAddNew()" pButton pRipple class="flex items-center gap-2 px-4 py-2 p-button-outlined rounded-md">
                 <i class="pi pi-plus"></i>
                 <span class="hidden md:block p-button-label">Add New</span>
             </button> -->
-            <p-button (onClick)="onClickRefresh()" label="Refresh" icon="pi pi-refresh"></p-button>
+            <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
         </div>
     </div>
     <p-table class="hidden lg:block" [value]="roles" [scrollable]="true">
@@ -25,9 +25,7 @@
             <tr>
                 <td pFrozenColumn>{{ item.name }}</td>
                 <td>{{ item.description }}</td>
-                <td>
-                    <p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" />
-                </td>
+                <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
                 <td class="flex flex-row" alignFrozen="right" pFrozenColumn [frozen]="true">
                     <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
                 </td>
