--- a/vcastplay-cms/src/app/pages/settings/users/users.component.html
+++ b/vcastplay-cms/src/app/pages/settings/users/users.component.html
@@ -4,8 +4,8 @@
     <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
         <app-filters class="w-full md:w-[25rem]"></app-filters>
         <div class="flex gap-4">
-            <p-button (onClick)="onClickAddNew()" label="Add New" variant="outlined" icon="pi pi-user-plus"></p-button>
-            <p-button (onClick)="onClickRefresh()" label="Refresh" icon="pi pi-refresh"></p-button>
+            <p-button (onClick)="onClickAddNew()" label="Add New" icon="pi pi-user-plus"></p-button>
+            <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
         </div>
     </div>
     <p-table class="hidden lg:block" [value]="users" [scrollable]="true">
@@ -23,9 +23,7 @@
                 <td pFrozenColumn>{{ item.code }}</td>
                 <td pFrozenColumn>{{ item.firstName }} {{ item.lastName }}</td>
                 <td>{{ item.email }}</td>
-                <td>
-                    <p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" />
-                </td>
+                <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
                 <td class="flex flex-row" alignFrozen="right" pFrozenColumn [frozen]="true">
                     <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
                 </td>
