--- a/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
+++ b/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
@@ -1,6 +1,6 @@
-<div class="md:absolute top-0 left-0 md:w-[30%] lg:w-[25%] z-50 md:m-5 my-3">
-    <div class="flex gap-2 justify-between items-center">
-        <div class="w-full" [ngClass]="{ 'hidden': showFilter() }">
+<!-- <div class="md:absolute top-0 left-0 md:w-[30%] lg:w-[25%] z-50 md:m-5 my-5">
+    <div class="flex items-center gap-2 w-full h-full p-2 rounded-sm" [ngClass]="{ 'bg-white justify-between shadow-lg': showFilter() }">
+        <div class="flex w-full gap-2" [ngClass]="{ 'hidden': !showFilter() }">
             <p-inputgroup>
                 <input type="text" pInputText [(ngModel)]="keywords" placeholder="Search Screen" />
                 <p-inputgroup-addon>
@@ -8,15 +8,29 @@
                 </p-inputgroup-addon>
             </p-inputgroup>
         </div>
-        <p-button [ngClass]="{ 'hidden': showFilter() }" (onClick)="initializeMap()" [text]="false" pTooltip="Refresh Map" tooltipPosition="bottom" icon="pi pi-refresh" />
+        <p-button (onClick)="initializeMap()" [text]="false" pTooltip="Refresh Map" tooltipPosition="bottom" icon="pi pi-refresh" />
         <p-button 
             (onClick)="showFilter.set(!showFilter())" 
             [text]="false" 
-            [pTooltip]="!showFilter() ? 'Hide Filter' : 'Show Filter'" 
+            [pTooltip]="showFilter() ? 'Hide Filter' : 'Show Filter'" 
             tooltipPosition="bottom" 
-            [icon]="!showFilter() ? 'pi pi-times' : 'pi pi-filter'" 
+            [icon]="showFilter() ? 'pi pi-times' : 'pi pi-filter'" 
         />
+    </div>
+</div> -->
+
+<div class="md:absolute top-0 left-0 md:w-[50%] lg:w-[30%] z-50 md:m-5 my-5">
+    <div class="flex items-center gap-2 w-full h-full p-2 rounded-sm bg-white justify-between shadow-lg">
+        <div class="flex w-full gap-2">
+            <p-inputgroup>
+                <input type="text" pInputText [(ngModel)]="keywords" placeholder="Search Screen" />
+                <p-inputgroup-addon>
+                    <p-button (onClick)="keywords.set('')" [icon]="'pi ' + (keywords() != '' ? 'pi-times' : 'pi-search')" />
+                </p-inputgroup-addon>
+            </p-inputgroup>
+        </div>
+        <p-button (onClick)="initializeMap()" [text]="false" pTooltip="Refresh Map" tooltipPosition="bottom" icon="pi pi-refresh" />
     </div>
 </div>
 
-<div id="screenMap" class="z-10" #screenMap></div>
+<div id="screenMap" class="z-10 rounded-lg" #screenMap></div>
