--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col gap-5">
+<!-- <div class="flex flex-col gap-5">
     
-    <div class="md:absolute top-0 right-0 w-full md:w-[40%] lg:w-[35%] xl:w-[25%] z-50 md:m-5">
+    <div class="md:absolute top-0 right-0 w-full md:w-[40%] lg:w-[35%] xl:w-[25%] z-50 md:m-5 shadow-lg">
         <p-accordion [value]="0">
             <p-accordion-panel value="0" >
                 <p-accordion-header [style]="{ 'background-color': 'var(--p-primary-500)', 'color': 'white' }">My Subscription Plan</p-accordion-header>
@@ -13,7 +13,7 @@
         <app-screen-map />
     </div>
 
-    <div class="md:absolute w-full md:w-[30%] lg:w-[25%] top-15 left-0 md:m-5 z-30">
+    <div class="md:absolute w-full md:w-[30%] lg:w-[25%] top-20 left-0 md:m-5 z-30 shadow-lg">
         <p-accordion value="0" styleClass="h-[34px]">
             <p-accordion-panel value="0">
                 <p-accordion-header>Screen Status</p-accordion-header>
@@ -24,5 +24,48 @@
                 <p-accordion-content><app-screen-lists /></p-accordion-content>
             </p-accordion-panel>
         </p-accordion>
+    </div>
+</div> -->
+
+<div class="flex flex-col gap-4 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+    <div class="grid grid-flow-col grid-rows-3 gap-4">
+        <div class="flex justify-between items-center md:col-span-2 p-4 bg-blue-500 text-white rounded-xl shadow-lg">
+            <div class="flex flex-col gap-5">
+                <div class="flex gap-2 items-center">
+                    <h2 class="text-2xl font-medium">Free Plan</h2>
+                    <li class="pi pi-verified text-green-500"></li>
+                </div>
+                <p-tag value="Trial ends in 3 days" severity="danger" icon="pi pi-clock" />
+            </div>
+            <p-button severity="secondary" label="Upgrade Plan" icon="pi pi-angle-double-up" />
+        </div>
+        <div class="md:row-span-2 md:col-span-2">
+            <p-card styleClass="h-full">
+                <ng-template #title>Status</ng-template>
+            </p-card>
+        </div>
+        <div class="row-span-1 md:row-span-3">
+            <p-card styleClass="h-full">
+                <ng-template #title>Storage</ng-template>
+                <app-storage-used />
+            </p-card>
+        </div>
+        <!-- <div class="col-span-4 md:col-span-2 lg:col-span-1">
+            <p-card>
+                <div class="flex justify-between items-center">
+                    <p class="text-2xl font-bold text-surface-900 dark:text-surface-0">25%</p>
+                    <div class="p-3 rounded-lg bg-orange-500 text-white">
+                        <i class="pi pi-database" style="font-size: 1.5rem;"></i>
+                    </div>
+                </div>
+                <ng-template #footer>
+                    <p class="text-sm">Storage Used</p>
+                </ng-template>
+            </p-card>
+        </div> -->
+    </div>
+    <div class="flex-1 relative">
+        <app-screen-map />
     </div>
 </div>
