--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -27,45 +27,26 @@
     </div>
 </div> -->
 
-<div class="flex flex-col gap-4 h-full">
+<div class="flex flex-col gap-5 h-full">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-    <div class="grid grid-flow-col grid-rows-3 gap-4">
-        <div class="flex justify-between items-center md:col-span-2 p-4 bg-blue-500 text-white rounded-xl shadow-lg">
-            <div class="flex flex-col gap-5">
-                <div class="flex gap-2 items-center">
-                    <h2 class="text-2xl font-medium">Free Plan</h2>
-                    <li class="pi pi-verified text-green-500"></li>
-                </div>
-                <p-tag value="Trial ends in 3 days" severity="danger" icon="pi pi-clock" />
-            </div>
-            <p-button severity="secondary" label="Upgrade Plan" icon="pi pi-angle-double-up" />
-        </div>
-        <div class="md:row-span-2 md:col-span-2">
+    <div class="grid grid-flow-row grid-cols-4 gap-5">
+        <div class="col-span-4 md:col-span-2 lg:col-span-1 flex flex-col gap-5">
             <p-card styleClass="h-full">
-                <ng-template #title>Status</ng-template>
+                <ng-template #subtitle>Online</ng-template>
+                <p class="text-2xl font-bold">10</p>
+            </p-card>
+            <p-card styleClass="h-full">
+                <ng-template #subtitle>Offline</ng-template>
+                <p class="text-2xl font-bold">10</p>
             </p-card>
         </div>
-        <div class="row-span-1 md:row-span-3">
-            <p-card styleClass="h-full">
-                <ng-template #title>Storage</ng-template>
+        <div class="col-span-4 md:col-span-2 lg:col-span-1">
+            <p-card>
                 <app-storage-used />
             </p-card>
         </div>
-        <!-- <div class="col-span-4 md:col-span-2 lg:col-span-1">
-            <p-card>
-                <div class="flex justify-between items-center">
-                    <p class="text-2xl font-bold text-surface-900 dark:text-surface-0">25%</p>
-                    <div class="p-3 rounded-lg bg-orange-500 text-white">
-                        <i class="pi pi-database" style="font-size: 1.5rem;"></i>
-                    </div>
-                </div>
-                <ng-template #footer>
-                    <p class="text-sm">Storage Used</p>
-                </ng-template>
-            </p-card>
-        </div> -->
     </div>
-    <div class="flex-1 relative">
+    <div class="flex-1 relative shadow-lg">
         <app-screen-map />
     </div>
 </div>
