--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -29,22 +29,63 @@
 
 <div class="flex flex-col gap-5 h-full">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-    <div class="grid grid-flow-row grid-cols-4 gap-5">
-        <div class="col-span-4 md:col-span-2 lg:col-span-1 flex flex-col gap-5">
-            <p-card styleClass="h-full">
-                <ng-template #subtitle>Online</ng-template>
-                <p class="text-2xl font-bold">10</p>
-            </p-card>
-            <p-card styleClass="h-full">
-                <ng-template #subtitle>Offline</ng-template>
-                <p class="text-2xl font-bold">10</p>
-            </p-card>
-        </div>
-        <div class="col-span-4 md:col-span-2 lg:col-span-1">
-            <p-card>
-                <app-storage-used />
-            </p-card>
-        </div>
+    <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+        <p-card styleClass="h-full">
+            <ng-template #title>
+                <div class="flex justify-between items-center gap-5">
+                    <p class="text-4xl font-bold">3</p>
+                    <div class="bg-green-500 p-3 rounded-lg text-white">
+                        <i class="pi pi-desktop" style="font-size: 1.5rem;"></i>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #footer>
+                Online
+            </ng-template>
+        </p-card>
+        <p-card styleClass="h-full">
+            <ng-template #title>
+                <div class="flex justify-between items-center gap-5">
+                    <p class="text-4xl font-bold">2</p>
+                    <div class="bg-red-500 p-3 rounded-lg text-white">
+                        <i class="pi pi-desktop" style="font-size: 1.5rem;"></i>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #footer>
+                Offline
+            </ng-template>
+        </p-card>
+        <p-card styleClass="h-full">
+            <ng-template #title>
+                <div class="flex justify-between items-start gap-5">
+                    <p-knob [(ngModel)]="value" [size]="80" />
+                    <div class="bg-orange-500 p-3 rounded-lg text-white">
+                        <i class="pi pi-database" style="font-size: 1.5rem;"></i>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #footer>
+                Storage Used
+            </ng-template>
+        </p-card>
+        <p-card styleClass="h-full">
+            <ng-template #title>
+                <div class="flex justify-between items-center gap-5">
+                    <div class="flex items-center gap-2">
+                        <p class="text-xl font-bold">Free Plan</p>
+                        <i class="pi pi-verified text-green-500"></i>
+                    </div>
+                    <div class="bg-blue-500 p-3 rounded-lg text-white">
+                        <i class="pi pi-credit-card" style="font-size: 1.5rem;"></i>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #subtitle>asd</ng-template>
+            <ng-template #footer>
+                Subscriptions
+            </ng-template>
+        </p-card>
     </div>
     <div class="flex-1 relative shadow-lg">
         <app-screen-map />
