--- a/vcastplay-cms/src/styles.scss
+++ b/vcastplay-cms/src/styles.scss
@@ -70,6 +70,14 @@ html {
     height: 100%;
 }
 
+.p-card-title {
+    height: 100%;
+}
+
+.p-card-footer {
+    flex: 1;
+}
+
 .circle {
     width: 50px;
     height: 50px;
