--- a/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
+++ b/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
@@ -21,7 +21,7 @@
 
         <div class="flex flex-col gap-4 p-3">
             <p class="col-span-3">Personal Information</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8" [formGroup]="userService.userForm">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8" [formGroup]="userForm">
                 <p-floatlabel variant="in">
                     <input id="firstName" pInputText formControlName="firstName" fluid />
                     <label for="firstName">First Name</label>
@@ -35,16 +35,16 @@
                     <label for="email">Email</label>
                 </p-floatlabel>
                 <p-floatlabel variant="in">
-                    <input id="mobile" pInputText formControlName="mobile"fluid />
+                    <p-inputmask mask="999-999-9999" formControlName="mobile" styleClass="w-full" />
                     <label for="mobile">Mobile Number</label>
                 </p-floatlabel>
                 <p-floatlabel variant="in">
                     <p-select formControlName="role" inputId="role" [options]="utils.roles" appendTo="body" optionLabel="label" optionValue="value" fluid />
                     <label for="role">Roles</label>
                 </p-floatlabel>
-                <div class="col-span-1 md:col-span-2 mt-5">
+                <div class="col-span-2 pt-5">
                     <div class="flex gap-3 float-right">
-                        <p-button label="Cancel" severity="secondary" />
+                        <p-button label="Cancel" severity="secondary" (onClick)="userForm.reset()" />
                         <p-button label="Update" severity="success" />
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     }
 
                 </div>
-                <div class="col-span-1 md:col-span-2 mt-5">
+                <div class="col-span-2 pt-5">
                     <div class="flex gap-3 float-right">
                         <p-button label="Cancel" severity="secondary" (onClick)="securityForm.reset()" />
                         <p-button label="Update" severity="success" />
