--- a/vcastplay-cms/src/app/pages/settings/users/users.component.html
+++ b/vcastplay-cms/src/app/pages/settings/users/users.component.html
@@ -65,7 +65,7 @@
             <label for="email">Email</label>
         </p-floatlabel>
         <p-floatlabel variant="in">
-            <input id="mobile" pInputText formControlName="mobile" class="w-full" />
+            <p-inputmask mask="999-999-9999" formControlName="mobile" styleClass="w-full" />
             <label for="mobile">Mobile Number</label>
         </p-floatlabel>
         <p-floatlabel variant="in">
