--- a/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
+++ b/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
@@ -73,11 +73,11 @@
                         <p-password formControlName="newPassword" toggleMask fluid>
                             <ng-template #footer>
                                 <p-divider />
-                                <ul class="pl-2 my-0 leading-normal">
-                                    <li>At least one lowercase</li>
-                                    <li>At least one uppercase</li>
-                                    <li>At least one numeric</li>
-                                    <li>Minimum 8 characters</li>
+                                <ul class="pl-2 my-0 text-sm">
+                                    <li>&bull; At least one lowercase</li>
+                                    <li>&bull; At least one uppercase</li>
+                                    <li>&bull; At least one numeric</li>
+                                    <li>&bull; Minimum 8 characters</li>
                                 </ul>
                             </ng-template>
                         </p-password> 
